Update with Wait Promise

--- a/hands-on.html
+++ b/hands-on.html
@@ -37,11 +37,29 @@
     
     });
 
+    const wait = (time) => {
+        return new Promise((resolve) => {
+            setTimeout(resolve, time)
+        });
+    }
+
     $('#rata').click(function () {
+        console.log("calculation start");
         const totalAge = students.reduce((acc, { age }) => acc + age, 0);
         const hasil = totalAge / students.length;
-        console.log(hasil);
-        $('#tampil').append(hasil);
+        wait(5000)
+        .then(res => console.log("age is " + hasil, res))
+        .catch(console.log);
+        wait(2000)
+        .then(() => {
+            console.log("second call started");
+            console.log("second call finished");
+        })
+        wait(4000)
+        .then(() => {
+            console.log("third call started");
+        })
+        .then(() => console.log("third call finished"))
     });
 </script>
 </body>
