--- a/homework/index.html
+++ b/homework/index.html
@@ -30,17 +30,6 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script>
-        $(document).ready(function() {
-            $('#submit').click(function () {
-                let title = $('#title').val();
-                let desc = $('#desc').val();
-                alert("Good job! The title you entered = "+title+" and the description = " +desc);
-                $('#judul').append(title);
-                document.getElementById('title').value = "";
-                document.getElementById('desc').value = "";
-            });
-        });
-    </script>
+    <script src="script.js" />
 </body>
 </html>
